# automl_lab_2

./: README.md  laba_2.ipynb  main.py  noise_experiment_meta.csv  pyproject.toml
datasets/: meta_dataset.csv  meta_dataset_selected.csv  selected_datasets.csv
datasets/additional/: correlated_pairs_0_9.csv  dropped_meta_features.csv  meta_features.csv  meta_model_bench.csv  meta_skips.csv
